feat(player): add image and clamp text
